--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>commons-jdk</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>commons-jdk</name>
     <description>Common classes used across my microservices</description>
     <packaging>jar</packaging>
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.oxygensend</groupId>
         <artifactId>microservices-parent-pom</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
 
